--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
   "editorType": ["figma", "figjam"],
   "menu": [
     { "name": "Add Offset Border", "command": "apply" },
+    { "name": "Master flow", "command": "master" },
     { "name": "Configure…", "command": "configure" }
   ]
 }
